finished site layout contents completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+
         <div class="header">
             <div class="header-search">
                 <label for="search">
@@ -21,10 +22,20 @@
                         <object data="images/bell.svg" type="image/svg+xml" class="icon" alt="bell icon"></object>
                     </label>
                 </div>
-                <div class="user-image">UserIMG</div>
-                <div class="user-name">UserNME</div>
+                <div class="user-image">
+                    <img src="images/profile-pic.jpeg" alt="profile picture">
+                </div>
+                <div class="user-name">BadBoy96</div>
             </div>
-            <div class="header-welcome">Header Welcome</div>
+            <div class="header-welcome">
+                    <img src="images/profile-pic.jpeg" alt="profile-pic">
+                <div class="welcome-message-top">
+                    <p>Hi there,</p>
+                </div>
+                <div class="welcome-message-bottom">
+                    <h3>Ari Ferarri(@BadBoy96)</h3>
+                </div>
+            </div>
             <div class="header-btns">
                 <button class="header-btn">New</button>
                 <button class="header-btn">Upload</button>
@@ -85,26 +96,184 @@
 
         <div class="content">
             <div class="projects">
-                <h3>Your Projects</h3>
-                <div class="project"></div>
-                <div class="project"></div>
-                <div class="project"></div>
-                <div class="project"></div>
-                <div class="project"></div>
-                <div class="project"></div>
+                <h3>Your Feed</h3>
+                <div class="project">
+                    <div class="project-text">
+                        <h4>NO WAY?!?</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Tellus cras adipiscing enim eu. Nisl tincidunt eget nullam non nisi est sit amet facilisis.
+                        </p>
+                    </div>
+                    <div class="project-action">
+                        <div class="project-star">
+                            <object data="images/star.svg" type="image/svg+xml" class="icon" alt="star icon"></object>
+                        </div>
+                        <div class="project-watch">
+                            <object data="images/watch.svg" type="image/svg+xml" class="icon" alt="watch icon"></object>
+                        </div>
+                        <div class="project-share">
+                            <object data="images/share.svg" type="image/svg+xml" class="icon" alt="share icon"></object>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-text">
+                        <h4>THAT'S CRAZY!!</h4>
+                        <p>
+                            Lorem ipsum tellus id interdum velit laoreet id donec ultrices tincidunt arcu. 
+                            Diam vulputate ut pharetra sit amet aliquam. Integer enim neque volutpat ac tincidunt. 
+                            Enim tortor at auctor urna nunc id cursus metus aliquam.
+                        </p>
+                    </div>
+                    <div class="project-action">
+                        <div class="project-star">
+                            <object data="images/star.svg" type="image/svg+xml" class="icon" alt="star icon"></object>
+                        </div>
+                        <div class="project-watch">
+                            <object data="images/watch.svg" type="image/svg+xml" class="icon" alt="watch icon"></object>
+                        </div>
+                        <div class="project-share">
+                            <object data="images/share.svg" type="image/svg+xml" class="icon" alt="share icon"></object>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-text">
+                        <h4>They did WHAAAT???</h4>
+                        <p>
+                            Lorem ipsum nisl tincidunt eget nullam non nisi est. Netus et malesuada fames ac turpis egestas sed tempus. 
+                            Pretium aenean pharetra magna ac placerat vestibulum lectus mauris. 
+                            Sit amet nisl purus in mollis nunc sed.
+                        </p>
+                    </div>
+                    <div class="project-action">
+                        <div class="project-star">
+                            <object data="images/star.svg" type="image/svg+xml" class="icon" alt="star icon"></object>
+                        </div>
+                        <div class="project-watch">
+                            <object data="images/watch.svg" type="image/svg+xml" class="icon" alt="watch icon"></object>
+                        </div>
+                        <div class="project-share">
+                            <object data="images/share.svg" type="image/svg+xml" class="icon" alt="share icon"></object>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-text">
+                        <h4>I can't EVEN!!</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Aenean euismod elementum nisi quis eleifend quam. 
+                        </p>
+                    </div>
+                    <div class="project-action">
+                        <div class="project-star">
+                            <object data="images/star.svg" type="image/svg+xml" class="icon" alt="star icon"></object>
+                        </div>
+                        <div class="project-watch">
+                            <object data="images/watch.svg" type="image/svg+xml" class="icon" alt="watch icon"></object>
+                        </div>
+                        <div class="project-share">
+                            <object data="images/share.svg" type="image/svg+xml" class="icon" alt="share icon"></object>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-text">
+                        <h4>You've gotta be KIDDING me!!</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan in. 
+                            In aliquam sem fringilla ut morbi tincidunt augue. Amet dictum sit amet justo donec.
+                        </p>
+                    </div>
+                    <div class="project-action">
+                        <div class="project-star">
+                            <object data="images/star.svg" type="image/svg+xml" class="icon" alt="star icon"></object>
+                        </div>
+                        <div class="project-watch">
+                            <object data="images/watch.svg" type="image/svg+xml" class="icon" alt="watch icon"></object>
+                        </div>
+                        <div class="project-share">
+                            <object data="images/share.svg" type="image/svg+xml" class="icon" alt="share icon"></object>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-text">
+                        <h4>OK. Are you serious??</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit pellentesque habitant morbi tristique senectus et netus et. Malesuada fames ac turpis egestas. 
+                            Commodo ullamcorper a lacus vestibulum sed. Vitae tempus quam pellentesque nec nam.
+                        </p>
+                    </div>
+                    <div class="project-action">
+                        <div class="project-star">
+                            <object data="images/star.svg" type="image/svg+xml" class="icon" alt="star icon"></object>
+                        </div>
+                        <div class="project-watch">
+                            <object data="images/watch.svg" type="image/svg+xml" class="icon" alt="watch icon"></object>
+                        </div>
+                        <div class="project-share">
+                            <object data="images/share.svg" type="image/svg+xml" class="icon" alt="share icon"></object>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <div class="news">
                 <div class="announcements">
                     <h3>Announcements</h3>
-                    <div class="announcements-section"></div>
+                    <div class="announcements-section">
+                        <div class="announcement-one">
+                            <h5>Site Maintenance</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                        </div>
+                        <div class="announcement-border"></div>
+                        <div class="announcement-two">
+                            <h5>Community Share Day</h5>
+                            <p>
+                                Odio eu feugiat pretium nibh ipsum consequat. 
+                                Et malesuada fames ac turpis egestas maecenas pharetra convallis.
+                            </p>
+                        </div>
+                        <div class="announcement-border"></div>
+                        <div class="announcement-three">
+                            <h4>Updated Privacy Policy</h4>
+                            <p>
+                                Ipsum a arcu cursus vitae congue mauris rhoncus. 
+                                Mi bibendum neque egestas congue quisque egestas. 
+                                Purus faucibus ornare suspendisse sed nisi.
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="trending">
                     <h3>Trending</h3>
-                    <div class="trending-section"></div>
+                    <div class="trending-section">
+                        <div class="trending-one">
+                            <img src="images/profile-pic-2.jpeg" alt="profile pic 2">
+                            <p>@beaniebaybee54</p>
+                        </div>
+                        <div class="trending-two">
+                            <img src="images/profile-pic-3.jpeg" alt="profile pic 3">
+                            <p>@rawrXDXDXDrawr</p>
+                        </div>
+                        <div class="trending-three">
+                            <img src="images/profile-pic-4.jpg" alt="profile pic 4">
+                            <p>@user5430495034958</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
 </html>
-
